[package]
name = "profile"
version = "0.1.1"
edition = "2021"


description = "Switch files by profile"
homepage = "https://github.com/bit-ranger/profile"
readme = "README.md"
keywords = ["cli"]
categories = [
  "development-tools",
  "development-tools::testing",
  "development-tools::profiling",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/profile"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.24"
tokio = { version = "1.21", features = [
  "fs",
  "time",
  "tracing",
  "process",
  "macros",
  "rt",
  "io-util",
  "rt-multi-thread",
] }
async-recursion = "1.0.0"
dirs = "4.0.0"
structopt = "0.3"
